unpackaged/main/default/objects/Implementation__c/Implementation__c.object-meta.xml
<CustomObject>
    <label>Implementation</label>
    <nameField>
        <label>Implementation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>