unpackaged/main/default/objects/Implementation__c/fields/Account_Summary_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary_URL__c</fullName>
    <description>External Link to the account summary doc.</description>
    <inlineHelpText>External Link to the account summary doc.</inlineHelpText>
    <label>Account Summary URL</label>
    <type>Url</type>
</CustomField>