unpackaged/main/default/objects/Implementation__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <inlineHelpText>The date when the use case(s) in scope for this implementation are live in production. Set when the implementation status is set to Activated.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>