unpackaged/main/default/objects/Implementation__c/fields/Activation_Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Escalation_Status__c</fullName>
    <label>Activation Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triggered</fullName>
            </value>
            <value>
                <fullName>Escalation 1 Sent</fullName>
            </value>
            <value>
                <fullName>Escalation 2 Sent</fullName>
            </value>
            <value>
                <fullName>Complete - No Reply</fullName>
            </value>
            <value>
                <fullName>Complete - Reply at Stage 1</fullName>
            </value>
            <value>
                <fullName>Complete - Reply at Stage 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>