unpackaged/main/default/objects/Implementation__c/fields/Activation_Month__c.field-meta.xml
<CustomField>
    <fullName>Activation_Month__c</fullName>
    <description>The calendar month in which the Activation Date falls. Returns the date of the first of that month</description>
    <formula>DATE(YEAR(Activation_Date__c),MONTH(Activation_Date__c),1)</formula>
    <inlineHelpText>The calendar month in which the Activation Date falls. Returns the date of the first of that month</inlineHelpText>
    <label>Activation Month</label>
    <type>Date</type>
</CustomField>