unpackaged/main/default/objects/Implementation__c/fields/Activation_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Activation_Pacing__c</fullName>
    <label>Activation Pacing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>