unpackaged/main/default/objects/Implementation__c/fields/Activation_Pacing_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Activation_Pacing_Forecast__c</fullName>
    <formula>if(Forecasted_Days_to_Activation__c &gt; Expected_days_to_activation__c,&quot;Behind&quot;,&quot;On Track&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Pacing Forecast</label>
    <type>Text</type>
</CustomField>