unpackaged/main/default/objects/Implementation__c/fields/Activation_Risk__c.field-meta.xml
<CustomField>
    <fullName>Activation_Risk__c</fullName>
    <description>The reason why a customer is at risk to activate.</description>
    <label>Activation Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low priority</fullName>
            </value>
            <value>
                <fullName>External technical dependency</fullName>
            </value>
            <value>
                <fullName>Financial difficulties / RIF</fullName>
            </value>
            <value>
                <fullName>Product / performance / stability issues</fullName>
            </value>
            <value>
                <fullName>Builder capacity / skills</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Poor stakeholder support</fullName>
            </value>
            <value>
                <fullName>Monolithic use case</fullName>
            </value>
            <value>
                <fullName>No issue identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>