unpackaged/main/default/objects/Implementation__c/fields/Assignment_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Review_Reason__c</fullName>
    <description>Reason included describing what should be reviewed at the review date. Should be added with the Assignment Review Date.</description>
    <label>Assignment Review Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>