unpackaged/main/default/objects/Implementation__c/fields/BU_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>BU_Platform_Type__c</fullName>
    <description>Platform Type mapped from the Business Unit. Used as a reference field for Hubspot email campaigns.</description>
    <formula>TEXT(Business_Unit__r.Platform_Type__c)</formula>
    <label>BU Platform Type</label>
    <type>Text</type>
</CustomField>