unpackaged/main/default/objects/Implementation__c/fields/Customer_Activation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Activation_Deadline__c</fullName>
    <inlineHelpText>The date by which the customer expects to go-live with any initially agreed use case(s) in production.</inlineHelpText>
    <label>Customer Activation Deadline</label>
    <type>Date</type>
</CustomField>