unpackaged/main/default/objects/Implementation__c/fields/Customer_Onboarding_Form_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding_Form_Submitted_At__c</fullName>
    <label>Customer Onboarding Form Submitted At</label>
    <type>Date</type>
</CustomField>