unpackaged/main/default/objects/Implementation__c/fields/Customer_POV__c.field-meta.xml
<CustomField>
    <fullName>Customer_POV__c</fullName>
    <inlineHelpText>How does the customer perceive the product and it’s long term impact on their company?</inlineHelpText>
    <label>Customer POV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Point Solution</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>