unpackaged/main/default/objects/Implementation__c/fields/Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activation__c</fullName>
    <description>For activated customers, number of days to activation. For pre-activated customers, number of days in funnel so far.</description>
    <formula>IF( Stage_Number__c &lt; 6,
 TODAY() - Business_Unit__r.Committed_Booking_Start_Date__c,
  Activation_Date__c - Business_Unit__r.Committed_Booking_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>