unpackaged/main/default/objects/Implementation__c/fields/Deployment_Details__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Details__c</fullName>
    <label>Deployment Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>