unpackaged/main/default/objects/Implementation__c/fields/Deployment_Progress__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Progress__c</fullName>
    <label>Deployment Progress</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>