unpackaged/main/default/objects/Implementation__c/fields/Deployment_Type_Workflows__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type_Workflows__c</fullName>
    <label>Deployment Type (Workflows)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deployment_Types_Workflows</valueSetName>
    </valueSet>
</CustomField>