unpackaged/main/default/objects/Implementation__c/fields/Expansion_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Opportunities__c</fullName>
    <inlineHelpText>Brief description of any expansion opportunities identified in sales process (e.g. new team or product launch).</inlineHelpText>
    <label>Expansion Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>