unpackaged/main/default/objects/Implementation__c/fields/Expected_days_to_activation__c.field-meta.xml
<CustomField>
    <fullName>Expected_days_to_activation__c</fullName>
    <label>Expected Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>