unpackaged/main/default/objects/Implementation__c/fields/Forecasted_Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Days_to_Activation__c</fullName>
    <formula>IF(ISBLANK(Customer_Activation_Deadline__c),NULL,Customer_Activation_Deadline__c-Business_Unit__r.Originating_Opportunity__r.CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>