unpackaged/main/default/objects/Implementation__c/fields/Identified_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Identified_Use_Cases__c</fullName>
    <inlineHelpText>What are the identified key use cases for Retool?</inlineHelpText>
    <label>Identified Use Cases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>