unpackaged/main/default/objects/Implementation__c/fields/Key_Players__c.field-meta.xml
<CustomField>
    <fullName>Key_Players__c</fullName>
    <inlineHelpText>Who are the key stakeholders and what are their roles?</inlineHelpText>
    <label>Key Players</label>
    <type>TextArea</type>
</CustomField>