unpackaged/main/default/objects/Implementation__c/fields/Launch_PoC_Uni_Invite_Sent__c.field-meta.xml
<CustomField>
    <fullName>Launch_PoC_Uni_Invite_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch PoC Uni Invite Sent</label>
    <type>Checkbox</type>
</CustomField>