unpackaged/main/default/objects/Implementation__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Activated</fullName>
                <default>true</default>
                <label>Not Activated</label>
            </value>
            <value>
                <fullName>Driving adoption</fullName>
            </value>
            <value>
                <fullName>Expanding</fullName>
            </value>
            <value>
                <fullName>Steady state</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>