unpackaged/main/default/objects/Implementation__c/fields/Mode_Last_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Mode_Last_Updated_At__c</fullName>
    <label>Mode Last Updated At</label>
    <type>Date</type>
</CustomField>