unpackaged/main/default/objects/Implementation__c/fields/Mode_Set_Method__c.field-meta.xml
<CustomField>
    <fullName>Mode_Set_Method__c</fullName>
    <label>Mode Set Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Modeled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>