unpackaged/main/default/objects/Implementation__c/fields/Most_Recent_Build_Session__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Build_Session__c</fullName>
    <description>Displays the date/time of the most recent build session.</description>
    <inlineHelpText>Displays the date/time of the most recent build session.</inlineHelpText>
    <label>Most Recent Build Session</label>
    <type>DateTime</type>
</CustomField>