unpackaged/main/default/objects/Implementation__c/fields/Named_DE_Requested__c.field-meta.xml
<CustomField>
    <fullName>Named_DE_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Named DE Requested?</label>
    <type>Checkbox</type>
</CustomField>