unpackaged/main/default/objects/Implementation__c/fields/Num_of_Build_Sessions_Used__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Build_Sessions_Used__c</fullName>
    <description>Number of build sessions used during implementation. Currently updated manually by DEs.</description>
    <inlineHelpText>Number of build sessions used during implementation.</inlineHelpText>
    <label># of Build Sessions Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>