unpackaged/main/default/objects/Implementation__c/fields/Onboarding_Health__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Health__c</fullName>
    <description>Onboarding health, updated by the DE owner. Green = healthy, yellow = concerning, red = at risk of not activating. Update as health changes; we track values over time.</description>
    <inlineHelpText>Onboarding health, updated by the DE owner. Green = healthy, yellow = concerning, red = at risk of not activating. Update as health changes; we track values over time.</inlineHelpText>
    <label>Onboarding Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>