unpackaged/main/default/objects/Implementation__c/fields/Open_Slack_Internal__c.field-meta.xml
<CustomField>
    <fullName>Open_Slack_Internal__c</fullName>
    <formula>IF(ISBLANK(Slack_Channel_Internal__c),&quot;Missing ID&quot;,HYPERLINK(&quot;https://retool.slack.com/archives/&quot;&amp;Slack_Channel_Internal__c, IF(ISBLANK(Slack_Channel_Name_Internal__c),&quot;Link&quot;, Slack_Channel_Name_Internal__c),&quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Slack (Internal)</label>
    <type>Text</type>
</CustomField>