unpackaged/main/default/objects/Implementation__c/fields/Org_Chart_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_URL__c</fullName>
    <description>External link to the org chart.</description>
    <inlineHelpText>External link to the org chart.</inlineHelpText>
    <label>Org Chart URL</label>
    <type>Url</type>
</CustomField>