unpackaged/main/default/objects/Implementation__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <formula>TEXT(Owner:User.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Department</label>
    <type>Text</type>
</CustomField>