unpackaged/main/default/objects/Implementation__c/fields/Owner_Level__c.field-meta.xml
<CustomField>
    <fullName>Owner_Level__c</fullName>
    <formula>TEXT(Owner:User.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Level</label>
    <type>Text</type>
</CustomField>