unpackaged/main/default/objects/Implementation__c/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <formula>TEXT(Owner:User.Opportunity_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Segment</label>
    <type>Text</type>
</CustomField>