unpackaged/main/default/objects/Implementation__c/fields/Owner_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Owner_Subteam__c</fullName>
    <formula>TEXT(Owner:User.Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Subteam</label>
    <type>Text</type>
</CustomField>