unpackaged/main/default/objects/Implementation__c/fields/Partnership_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Objectives__c</fullName>
    <description>Mid-to-long term objectives that we have with the customer.</description>
    <inlineHelpText>Mid-to-long term objectives that we have with the customer.</inlineHelpText>
    <label>Partnership Objectives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>