unpackaged/main/default/objects/Implementation__c/fields/Primary_Builder_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Builder_Time_Zone__c</fullName>
    <inlineHelpText>The time zone in which the main Retool builders are located.</inlineHelpText>
    <label>Primary Builder Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pacific</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>GMT (UK)</fullName>
            </value>
            <value>
                <fullName>Central European Time (CET)</fullName>
            </value>
            <value>
                <fullName>IST (India)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>