unpackaged/main/default/objects/Implementation__c/fields/Product_Feedback_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Feedback_URL__c</fullName>
    <description>External link to our shared product feedback tracker.</description>
    <inlineHelpText>External link to our shared product feedback tracker.</inlineHelpText>
    <label>Product Feedback URL</label>
    <type>Url</type>
</CustomField>