unpackaged/main/default/objects/Implementation__c/fields/Production_Hosting_Provider__c.field-meta.xml
<CustomField>
    <fullName>Production_Hosting_Provider__c</fullName>
    <label>Production Hosting Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hosting_Providers</valueSetName>
    </valueSet>
</CustomField>