unpackaged/main/default/objects/Implementation__c/fields/Production_Hosting_Style__c.field-meta.xml
<CustomField>
    <fullName>Production_Hosting_Style__c</fullName>
    <label>Production Hosting Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Type</valueSetName>
    </valueSet>
</CustomField>