unpackaged/main/default/objects/Implementation__c/fields/PS_included_on_Source_Opp__c.field-meta.xml
<CustomField>
    <fullName>PS_included_on_Source_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS included on Source Opp</label>
    <type>Checkbox</type>
</CustomField>