unpackaged/main/default/objects/Implementation__c/fields/Relevant_Linear_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Linear_Tickets__c</fullName>
    <label>Relevant Linear Tickets</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>