unpackaged/main/default/objects/Implementation__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <inlineHelpText>Are there are known risks that could prevent penetration or growth?</inlineHelpText>
    <label>Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>