unpackaged/main/default/objects/Implementation__c/fields/Security_Contact__c.field-meta.xml
<CustomField>
    <fullName>Security_Contact__c</fullName>
    <description>Deprecation notes: Migrated the values to Business Unit Contact Roles</description>
    <label>zOLDSecurity Contact</label>
    <type>Email</type>
</CustomField>