unpackaged/main/default/objects/Implementation__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <inlineHelpText>How do you gauge the relative technical competency of key builders/ engineers?</inlineHelpText>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Builder_Skill_Level</valueSetName>
    </valueSet>
</CustomField>