unpackaged/main/default/objects/Implementation__c/fields/Skill_Level_Details__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level_Details__c</fullName>
    <label>Skill Level Details</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>