unpackaged/main/default/objects/Implementation__c/fields/Slack_Channel_External__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_External__c</fullName>
    <label>Slack Channel (External)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>