unpackaged/main/default/objects/Implementation__c/fields/Slack_Channel_Internal__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Internal__c</fullName>
    <label>Slack Channel (Internal)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>