unpackaged/main/default/objects/Implementation__c/fields/Source_Control_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_Adopted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Control Adopted</label>
    <type>Checkbox</type>
</CustomField>