unpackaged/main/default/objects/Implementation__c/fields/Source_Control_Provider__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_Provider__c</fullName>
    <label>Source Control Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Control_Providers</valueSetName>
    </valueSet>
</CustomField>