unpackaged/main/default/objects/Implementation__c/fields/SSO_Details__c.field-meta.xml
<CustomField>
    <fullName>SSO_Details__c</fullName>
    <label>SSO Details</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>