unpackaged/main/default/objects/Implementation__c/fields/SSO_Provider__c.field-meta.xml
<CustomField>
    <fullName>SSO_Provider__c</fullName>
    <label>SSO Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSO_Providers</valueSetName>
    </valueSet>
</CustomField>