unpackaged/main/default/objects/Implementation__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <formula>CASE(RecordType.Name,
 &quot;Lifecycle&quot;,
 CASE(Stage__c,
  &quot;Inactive&quot;,0,
  &quot;Unassigned&quot;,1,
  &quot;New&quot;,2,
  &quot;Onboarding - Deploy&quot;,3,
  &quot;Onboarding - Train&quot;,4,
  &quot;Onboarding - Build&quot;,5,
  &quot;Activated&quot;,6,
  NULL
 ),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>