unpackaged/main/default/objects/Implementation__c/fields/Stakeholder_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Gaps__c</fullName>
    <description>Known gaps in our org chart that we need to fill.</description>
    <inlineHelpText>Known gaps in our org chart that we need to fill.</inlineHelpText>
    <label>Stakeholder Gaps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>