unpackaged/main/default/objects/Implementation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(RecordType.Name,
 &quot;Lifecycle&quot;,
 CASE(Stage__c,
  &quot;Inactive&quot;,&quot;Closed&quot;,
  &quot;Open&quot;
 ),
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>