unpackaged/main/default/objects/Implementation__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <inlineHelpText>What would success look like at this account?</inlineHelpText>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>