unpackaged/main/default/objects/Implementation__c/fields/Success_Intro_Date__c.field-meta.xml
<CustomField>
    <fullName>Success_Intro_Date__c</fullName>
    <inlineHelpText>The date of the handoff call when the customer is introduced to the Success Owner by the AE.</inlineHelpText>
    <label>Success Intro Date</label>
    <type>Date</type>
</CustomField>