unpackaged/main/default/objects/Implementation__c/fields/Success_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan_URL__c</fullName>
    <description>External link to a success plan which is shared with the customer.</description>
    <inlineHelpText>External link to a success plan which is shared with the customer.</inlineHelpText>
    <label>Success_Plan_URL</label>
    <type>Url</type>
</CustomField>