unpackaged/main/default/objects/Implementation__c/fields/TAM_Booking_Link__c.field-meta.xml
<CustomField>
    <fullName>TAM_Booking_Link__c</fullName>
    <label>TAM Booking Link</label>
    <type>Url</type>
</CustomField>