unpackaged/main/default/objects/Implementation__c/fields/Tier_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tier_Override_Reason__c</fullName>
    <label>Tier Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>