unpackaged/main/default/objects/Implementation__c/recordTypes/Lifecycle.recordType-meta.xml
<RecordType>
    <fullName>Lifecycle</fullName>
    <active>true</active>
    <label>Lifecycle</label>
</RecordType>