unpackaged/main/default/objects/Implementation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Customer_Activation_Deadline__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Tier__c</columns>
    <columns>Customer_POV__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>