unpackaged/main/default/objects/Implementation__c/listViews/My_Implementations.listView-meta.xml
<ListView>
    <fullName>My_Implementations</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Customer_Activation_Deadline__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Implementation__c.Lifecycle</value>
    </filters>
    <label>My Implementations</label>
</ListView>